contenu de la section gastronomie fait avec le css

--- a/japon.html
+++ b/japon.html
@@ -241,9 +241,62 @@
                     </div>
                 </div>
                 <div class="container-plat">
-                    <img src="https://cdn.generationvoyage.fr/2021/08/j1.jpg" alt="">
+                    <img src="https://cdn.generationvoyage.fr/2021/08/j2.jpg" alt="">
                     <div class="detail-plat">
-                        <h3>Edamame</h3>
+                        <h3>Takoyaki</h3>
+                        <p>
+                            Spécialité d’Osaka, les takoyaki se présentent sous forme de boulettes de pâtes, 
+                            assimilables à notre pâte à crêpes, et contiennent des morceaux de poulpes cuits.
+                            Ce mets est essentiellement vendu dans des échoppes, sur le bord de la route, 
+                            et se consomme à l’extérieur. Par barquette de 6, 10 ou 12, il est l’en-cas parfait d’un milieu d’après-midi, 
+                            avant ou après une longue visite d’Osaka.
+                        </p>
+                    </div>
+                </div>
+                <div class="container-plat">
+                    <img src="https://cdn.generationvoyage.fr/2021/08/j3.jpg" alt="">
+                    <div class="detail-plat">
+                        <h3>Onigiri</h3>
+                        <p>
+                            Les onigiris font partie intégrante de la cuisine japonaise, 
+                            bien qu’ils ne soient pas considérés comme un plat mais bel et bien comme un en-cas. 
+                            Boulettes de riz farcies entourées d’algues noires, souvent de formes triangulaires, 
+                            les onigiris sont un véritable « coupe-faim ».
+                            S’il en existe une multitude à travers le Japon, l’une des plus fréquentes est fourrée avec de l’umeboshi, 
+                            une prune japonaise salée et séchée, très acide. Quant aux autres, vous pourrez en trouver fourrées au poisson (notamment du thon), 
+                            ou encore avec du miso.
+                        </p>
+                    </div>
+                </div>
+                <div class="container-plat">
+                    <img src="https://cdn.generationvoyage.fr/2021/08/j4.jpg" alt="">
+                    <div class="detail-plat">
+                        <h3>Gyoza</h3>
+                        <p>
+                            Les gyozas sont LA version japonaise des raviolis chinois. 
+                            Absolument délicieux, ce sont en fait des raviolis frits au chou et au porc revisités, 
+                            entourés dans un chausson de farine de blé. S’ils peuvent être considérés comme un en-cas, 
+                            le fait qu’ils soient servis dans de nombreux restaurants à ramen nous les font placer davantage comme une entrée.
+                            Dégustés en une bouchée, ils doivent d’abord être trempés dans de la sauce soja afin d’en faire ressortir toutes les saveurs. avant le repas.
+                        </p>
+                    </div>
+                </div>
+                <div class="container-plat">
+                    <img src="https://cdn.generationvoyage.fr/2021/08/j5.jpg" alt="">
+                    <div class="detail-plat">
+                        <h3>Tempura</h3>
+                        <p>
+                            Connues de tous, les tempuras sont un plat de friture japonaise… originaire du Portugal ! 
+                            En effet, elles sont la ré-adaptation des peixinhos da horta, introduites sur le territoire japonais par les missionnaires jésuites du XVIIe siècle.
+                            Depuis, les japonais ont adapté la recette, et depuis la fin du XIXe siècle, il existe même des restaurants dédiés aux tempuras à travers le Japon. 
+                            Évidemment, la recette la plus connue reste celle à la crevette.
+                        </p>
+                    </div>
+                </div>
+                <div class="container-plat">
+                    <img src="https://cdn.generationvoyage.fr/2021/08/j6.jpg" alt="">
+                    <div class="detail-plat">
+                        <h3>Soupe miso</h3>
                         <p>
                             Préparation de fèves immatures, les Edamame sont consommées aussi bien en Chine qu’au Japon, 
                             ainsi qu’à travers l’Asie du Sud-Est. Souvent assaisonnées seulement de sel, parfois d’épices, 
@@ -252,13 +305,197 @@
                     </div>
                 </div>
                 <div class="container-plat">
-                    <img src="https://cdn.generationvoyage.fr/2021/08/j1.jpg" alt="">
+                    <img src="https://cdn.generationvoyage.fr/2021/08/j7.jpg" alt="">
                     <div class="detail-plat">
-                        <h3>Edamame</h3>
+                        <h3>Sashimi</h3>
                         <p>
-                            Préparation de fèves immatures, les Edamame sont consommées aussi bien en Chine qu’au Japon, 
-                            ainsi qu’à travers l’Asie du Sud-Est. Souvent assaisonnées seulement de sel, parfois d’épices, 
-                            elles se consomment essentiellement comme en-cas, ou au cours d’un apéro, avant le repas.
+                            les sashimis sont considérés comme un véritable Art au Japon, et ce depuis le XVe siècle ! 
+                            Préparation artistique et sophistiquée, les sashimis sont un mets traditionnels et surtout une véritable spécialité japonaise.
+                            Saumon, thon ou dorade, les sashimis sont des tranches de poissons frais, de la taille d’une bouchée, 
+                            que l’on adore dévorer entre amis au début d’un repas.
+                        </p>
+                    </div>
+                </div>
+                <div class="container-plat">
+                    <img src="https://cdn.generationvoyage.fr/2021/08/j8.jpg" alt="">
+                    <div class="detail-plat">
+                        <h3>Okonomiyaki</h3>
+                        <p>
+                            Régulièrement comparé à une omelette, un pancake ou même à une pizza, 
+                            l’Okonomiyaki n’a finalement aucun équivalent en Occident. Il s’agit là d’un plat japonais, 
+                            consistant, composé d’une pâte faite d’œuf, de farine et de dashi qui enrobe un nombre d’ingrédients très variables (allant du porc au fromage), 
+                            découpés en petits morceaux.
+                            Le tout est finalement cuit sur une plaque chauffante, l’une des cuissons les plus répandues au Japon.
+                        </p>
+                    </div>
+                </div>
+                <div class="container-plat">
+                    <img src="https://cdn.generationvoyage.fr/2021/08/j9.jpg" alt="">
+                    <div class="detail-plat">
+                        <h3>Yakitori</h3>
+                        <p>
+                            Autre coup de cœur de la rédaction, les yakitori sont une véritable bénédiction culinaire ! 
+                            Les yakitori sont des brochettes cuites sur le grill, dont chaque partie représente une bouchée.
+                            Si son adaptation en occident a fait naître des recettes de bœuf au fromage ou autre porc caramélisé, 
+                            il n’existait au Japon que deux recettes au poulet : l’une nature, assaisonnée de sel ; 
+                            et l’autre cuite nature et finalement enduit d’une sauce de soja épaisse.
+                        </p>
+                    </div>
+                </div>
+                <div class="container-plat">
+                    <img src="https://cdn.generationvoyage.fr/2021/08/shutterstock_1135797380-768x512.jpg" alt="">
+                    <div class="detail-plat">
+                        <h3>Les plats de pâtes/nouilles</h3>
+                        <p>
+                            Voici sans aucun doute la spécialité la plus typique de la culture japonaise, 
+                            et celle que l’on retrouve le plus au cœur des mangas et autres animes : les plats de nouilles/pâtes. 
+                            Parmi ceux-là, on retrouve les udon, qui sont avec les soba, les pâtes les plus consommées du Japon, 
+                            et qui se consomment aussi bien chaudes que froides, les rendant appréciables toute l’année.
+                            Les ramen, quant à elles, sont un plat de nouilles plongées dans un bouillon. Ce dernier est régulièrement à base de bœuf ou de poisson, 
+                            assaisonné au miso et garni de différents légumes. Si elles ont été importées de Chine, 
+                            elles sont aujourd’hui considérées à 100% comme faisant partie de la culture japonaise.
+                        </p>
+                    </div>
+                </div>
+                <div class="container-plat">
+                    <img src="https://cdn.generationvoyage.fr/2021/08/j11.jpg" alt="">
+                    <div class="detail-plat">
+                        <h3>Karê raisu</h3>
+                        <p>
+                            Le karê raisu, aussi appelé riz au curry japonais, 
+                            est l’un des plats les plus consommés et l’une des plus grandes spécialités japonaises ! 
+                            Mais le curry ne trouve pas seulement sa place avec le riz !
+                            En effet, les japonais le consomment également avec des nouilles épaisses, le karê udon, 
+                            ou encore avec du pain fourré, le karê pan.
+                        </p>
+                    </div>
+                </div>
+                <div class="container-plat">
+                    <img src="https://cdn.generationvoyage.fr/2021/08/j12.jpg" alt="">
+                    <div class="detail-plat">
+                        <h3>Sushis/Makis</h3>
+                        <p>
+                            Si les sushis et autres makis sont un emblème de la cuisine japonaise à travers l’occident, 
+                            il est important de savoir qu’ils sont l’une des spécialités du Japon les moins consommées par ses habitants.
+                            Riz vinaigré accompagnés de poissons crus, 
+                            ils peuvent se présenter sous de multiples formes. 
+                            Ce sont d’ailleurs les occidentaux qui ont crée la plupart des recettes que vous connaissez aujourd’hui, 
+                            non pas les japonais eux-mêmes.
+                        </p>
+                    </div>
+                </div>
+                <div class="container-plat">
+                    <img src="https://cdn.generationvoyage.fr/2021/08/j13.jpg" alt="">
+                    <div class="detail-plat">
+                        <h3>Donburi</h3>
+                        <p>
+                            Le donburi est l’un des plats les plus typiques de la gastronomie japonaise. 
+                            Littéralement, il signifie « grand bol » dans la langue nippone. Ce « grand bol » est alors garni de riz blanc non assaisonné, 
+                            avant d’être couronné de multiples garnitures.
+                            Selon les garnitures, son nom diffère alors. 
+                            Il peut s’agir du katsudon avec du porc pané, 
+                            du gyüdon avec des lamelles de bœufs, ou encore de l’unigadon avec des anguilles grillées.
+                        </p>
+                    </div>
+                </div>
+                <div class="container-plat">
+                    <img src="https://cdn.generationvoyage.fr/2021/08/j14.jpg" alt="">
+                    <div class="detail-plat">
+                        <h3>Fugu</h3>
+                        <p>
+                            Une nouvelle fois ici, la cuisine s’approche particulièrement de l’Art ! 
+                            Le fugu, spécialité gastronomique japonaise, est le plat le plus dangereux jamais cuisiné. 
+                            En effet, une seule erreur dans sa préparation peut s’avérer mortelle pour le consommateur, 
+                            tant son poison est toxique.
+                            La préparation de ce plat de poisson, souvent servi cru, est d’ailleurs extrêmement encadrée au Japon, 
+                            et les chefs voulant en servir doivent d’abord subir une formation de 3 ou 4 années !
+                        </p>
+                    </div>
+                </div>
+                <div class="container-plat">
+                    <img src="https://cdn.generationvoyage.fr/2021/08/j15.jpg" alt="">
+                    <div class="detail-plat">
+                        <h3>Sukiyaki</h3>
+                        <p>
+                            Le sukiyaki est également appelé fondue japonaise, 
+                            et pourrait être largement comparé à nos différents plats de bœuf en sauce, 
+                            longuement laissés mijotés.
+                            La viande de bœuf est alors coupé en fines tranches, 
+                            et cuites avec une multitude de légumes afin de donner un goût magique au bouillon final. 
+                            Dégusté en famille, le sukiyaki est l’une des spécialités japonaises préférées des locaux.
+                        </p>
+                    </div>
+                </div>
+                <div class="container-plat">
+                    <img src="https://cdn.generationvoyage.fr/2021/08/j16.jpg" alt="">
+                    <div class="detail-plat">
+                        <h3>Bœuf de Kobe</h3>
+                        <p>
+                            Comment évoquer les spécialités culinaires japonaises sans parler du bœuf de Kobe ? 
+                            Viande rouge la plus connue et la plus désirée au monde, le bœuf de Kobe est connu pour sa tendresse et son goût inimitable.
+                            Vendue dans le monde entier à prix d’or, cette spécialité se consomme au Japon à la fois comme viande grillée, mais également et surtout en bouillon, 
+                            comme dans le sukiyaki vu précédemment.
+                        </p>
+                    </div>
+                </div>
+                <div class="container-plat">
+                    <img src="https://cdn.generationvoyage.fr/2021/08/j17.jpg" alt="">
+                    <div class="detail-plat">
+                        <h3>Dorayaki</h3>
+                        <p>
+                            Le dorayaki est une pâtisserie japonaise, dont le beignet est, à son tour, originaire d’une recette du Portugal : 
+                            le Castella. Si à l’origine, le dorayaki n’avait qu’une seule couche, c’est depuis le début du XXe siècle qu’il est recouvert des deux côtés.
+                            Ce sandwich de pancakes est doré et fourré à l’anko, une crème de haricots sucrée. À déguster frais, 
+                            cette spécialité japonaise pourrait être comparable à notre madeleine.
+                        </p>
+                    </div>
+                </div>
+                <div class="container-plat">
+                    <img src="https://cdn.generationvoyage.fr/2021/08/j18.jpg" alt="">
+                    <div class="detail-plat">
+                        <h3>Mochi</h3>
+                        <p>
+                            Le mochi est un gâteau à base de riz gluant et généralement fourré, 
+                            à son tour, d’anko, cette pâte de haricots sucrée, particulièrement douce et légère. De nos jours, 
+                            les recettes de mochi se font nombreuses, et l’anko a été remplacé par du chocolat, de la confiture ou encore par de la glace !
+                        </p>
+                    </div>
+                </div>
+                <div class="container-plat">
+                    <img src="https://cdn.generationvoyage.fr/2021/08/j19.jpg" alt="">
+                    <div class="detail-plat">
+                        <h3>Yokan</h3>
+                        <p>
+                            Le yokan est une pâtisserie véritablement comparable à la pâte de fruit. 
+                            Elle paraît cependant plus légère, et se trouve elle aussi constituée d’une pâte de haricot rouge gélifié.
+                            Au Japon, le yokan se déguste à l’heure du thé, comme confiserie.
+                        </p>
+                    </div>
+                </div>
+                <div class="container-plat">
+                    <img src="https://cdn.generationvoyage.fr/2021/08/j20.jpg" alt="">
+                    <div class="detail-plat">
+                        <h3>Bubble Tea</h3>
+                        <p>
+                            C’est LA boisson populaire du moment en France, et elle nous vient directement du Japon ! 
+                            Le Bubble Tea, thé aux perles de tapioca originaire dans un premier temps de Taïwan, 
+                            fait fureur depuis plus de deux ans dans les métropoles japonaises, surtout auprès des jeunes adolescentes.
+                            Si les jeunes apprécient la douceur des perles de tapioca, 
+                            ils suivent surtout la tendance et ont particulièrement l’air d’apprécier ces boissons pour… leurs photos Instagram. 
+                            Si cette boisson se trouve être particulièrement consommée par les adolescents, 
+                            il reste tout de même difficile ici de parler d’une vraie « spécialité japonaise ».
+                        </p>
+                    </div>
+                </div>
+                <div class="container-plat">
+                    <img src="https://cdn.generationvoyage.fr/2021/08/j21.jpg" alt="">
+                    <div class="detail-plat">
+                        <h3>Saké</h3>
+                        <p>
+                            En voilà, une véritable spécialité japonaise, pour terminer ce classement ! 
+                            Le saké ! Boisson alcoolisée à base de riz, elle est servie en tant que digestif après un lourd repas.
+                            Mais pour les japonais, le mot saké peut être étendu à l’ensemble des boissons alcoolisés. 
+                            C’est pour cela qu’ils préfèrent utiliser le terme de Nihonshu, plus spécifique.
                         </p>
                     </div>
                 </div>
