modif du header hero,hero plus dans le header, hero déplacer dans une section dans le main ajuster avec avec css, fonctionnel

--- a/japon.html
+++ b/japon.html
@@ -20,16 +20,18 @@
                     <li><a href="">Contact</a></li>
                 </ul>
             </nav>
-        </div>
-        <div class="intro-box">
-            <p>
-                Le Japon, vous en rêvez ? Il fascine tant le voyageur que l’on croit le connaître,<br>
-                sans même y être allé. Pourtant, ce pays ne se résume pas qu’à ses temples et ses mégapoles. <br> 
-                Venez découvrir les plus beaux endroits à visiter au Japon !
-            </p>
-        </div>       
+        </div>              
     </header>
     <main>
+        <section class="hero">
+            <div class="intro-box">
+                <p>
+                    Le Japon, vous en rêvez ? Il fascine tant le voyageur que l’on croit le connaître,<br>
+                    sans même y être allé. Pourtant, ce pays ne se résume pas qu’à ses temples et ses mégapoles. <br> 
+                    Venez découvrir les plus beaux endroits à visiter au Japon !
+                </p>
+            </div> 
+        </section>
         <section class="japan-intro-section">
             <div class="intro-japan">
                 <h1>
