--- a/index.html
+++ b/index.html
@@ -33,8 +33,14 @@
                             <li><a class="btn-transition" href="outre-mer.html">Outre-Mer</a></li>
                         </ul>
                     </li>
-                    <li><a href="contact.html">Contact</a></li>
                 </ul>
+                <a class="btn-contact">
+                    <span>Contact</span>
+                    <svg>
+                        <polyline class="remplissage" points="0 0, 150 0, 150 55, 0 55, 0 0"></polyline>
+                        <polyline class="ligne-animee" points="0 0, 150 0, 150 55, 0 55, 0 0"></polyline>
+                    </svg>
+                </a>
             </nav>
         </div>
     </header>
