--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="presentation">
 
             <div class="présentation">
-                <div class="présentation">
+                <div class="taille-div-img">
                     <img src="japon.jpg" alt="" class="image-présentation">
                 </div>
 
