section slide terminer

--- a/japon.html
+++ b/japon.html
@@ -502,7 +502,16 @@
                     </div>
                 </div>
             </div>
-
+        </section>
+        <section class="section-slide"> 
+            <div class="slideshow">
+                <img src="https://cdn.wakuwaku.today/uploads/store/fireworks-season-cover-1d7c1fb2750bf065de1a15701164c58d.jpg" alt="image de feu d'artifice au japon">
+                <img src="https://evasion-online.com/images/2015/03/Tokyo-Main-Image.jpg" alt>
+                <img src="https://res.cloudinary.com/wilderness-travel/image/upload/c_scale,dpr_auto,w_auto/f_auto,q_auto/v1/trips/asia/japan/japan-temples-pearl-divers-and-pilgrimage-trails/1-slide-tori-gate-at-fushimi-inari-shrine-in-kyoto-pano" alt="image de japonaise en kimono qui traversent les tori">
+                <img src="https://thumbs.dreamstime.com/b/la-zone-d-atelier-c%C3%A9l%C3%A8bre-de-l-%C3%A9lectronique-tokyo-enseignes-au-n%C3%A9on-rue-principale-akihabara-allument-nuit-japon-f%C3%A9vrier-le-149419987.jpg" alt="rue de akihabara de nuit">
+                <img src="https://www.nautiljon.com/images/culture/00/64/mont_fuji_46.jpg?1496221230" alt="image du mont fuji">
+             </div>
+             <p>Bon Voyage</p>
         </section>
     </main>
     <footer></footer>    
