modifié le style du header pour france.html

--- a/france.html
+++ b/france.html
@@ -11,18 +11,18 @@
 <body>
     <header>
         <div class="centrage">
-            <img src="media/img/wanderer_logo.png" alt="logo site web">
+            <a href="index.html"><img id="header-logo" src="media/img/wanderer_logo.png" alt="logo site web"></a>
             <nav>
                 <ul>
                     <li><a href="#">Accueil</a></li>
                     <li class="menu-deroulant">
                         <a href="#">Wanderers</a>
                         <ul class="sous-menu">
-                            <li><a class="btn-transition" href="france.html">Félix</a></li>
-                            <li><a class="btn-transition" href="france.html">Fériale</a></li>
-                            <li><a class="btn-transition" href="france.html">Ibni</a></li>
-                            <li><a class="btn-transition" href="france.html">Jérôme</a></li>
-                            <li><a class="btn-transition" href="france.html">Joris</a></li>
+                            <li><a class="btn-transition" href="#.html">Félix</a></li>
+                            <li><a class="btn-transition" href="polynesie.html">Fériale</a></li>
+                            <li><a class="btn-transition" href="japon.html">Ibni</a></li>
+                            <li><a class="btn-transition" href="salvador.html">Jérôme</a></li>
+                            <li><a class="btn-transition" href="grece.html">Joris</a></li>
                         </ul>
                     </li>
                     <li class="menu-deroulant">
