image background inserer dans les section ville du japon

--- a/japon.html
+++ b/japon.html
@@ -157,7 +157,7 @@
             </div>
         </section>
         <section class="nikko">
-            <div class="titre-villes titre-large"><h2>Nikko</h2></div>
+            <div class="titre-villes"><h2>Nikko</h2></div>
             <div class="container-visit reverse">
                 <img src="https://cdn.generationvoyage.fr/2019/06/endroits-japon10-e1559901527314.jpg" alt="image de la ville d'Osaka">
                 <div class="detail-box">
@@ -202,7 +202,7 @@
             </div>
         </section>
         <section class="nagoya">
-            <div class="titre-villes titre-large"><h2>Nagoya</h2></div>
+            <div class="titre-villes"><h2>Nagoya</h2></div>
             <div class="container-visit">
                 <img src="https://cdn.generationvoyage.fr/2019/06/shutterstock_1085404574-e1559894577753.jpg" alt="image de la ville d'Osaka">
                 <div class="detail-box">
