--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wanderer</title>
     <link rel="stylesheet" href="css/voyages.css">
+    <link rel="stylesheet" href="style/footer.css">
 </head>
 <body>
     <header>
@@ -44,5 +45,25 @@
             </nav>
         </div>
     </header>
+    <main>
+
+    </main>
+    <footer>
+        <div class="footer">
+            <div class="description">
+                <p> Voyage est une agence spécialisé dans le voyage sur-mesure en Amérique du Nord,  Latine, en Asie et en Europe. Voyagez comme vous l’imaginez avec Voyage.</p>
+            </div>
+            <div class="description">
+                <p>NEWSLETTER</p>
+                <a class="newlester" href="">je m'inscris a la newslester</a>
+            </div>
+            <div class="description">
+                <p class="contacte">Contact france</p>
+                <p>04 50 46 90 28</p>
+                <p>info@al-voyage.com</p>
+            </div>
+        </div>
+        <p class="droit">Jérome LACROIX,Félix HAUGIER,Ibni-Yamine CHABANE,Fériale BOUREGA, Joris Landaret,formation Start</p>
+    </footer>
 </body>
 </html>
