--- a/grèce.html
+++ b/grèce.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>La Grèce "vidéos"</title>
-    <link href="grèce.css" rel="stylesheet" type="text/css">
+    <title>La Grèce</title>
+    <link href="css/grèce.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
@@ -21,7 +21,7 @@
             </ul>
         </div>
         <div id="img">
-            <img src="santorini.jpg" alt="">
+            <img src="img/santorini.jpg" alt="">
         </div>
     </section>
 
@@ -135,37 +135,37 @@
 
       <div id="iles">
         <div class="iles">
-          <img src="patmos.jpg" alt="" class="img">
+          <img src="img/patmos.jpg" alt="" class="img">
           <h2>Île de Patmos (Dodécanèse) </h2>
           <p>Dominée par les maisons blanches de Chora qui entourent le monastère de Saint-Jean-le-Théologue, l'île de Patmos est classée Monument historique depuis 1946 et le Parlement grec l'a proclamée "île sacrée" en 1981 </p>
         </div>
 
         <div class="iles">
-          <img src="spetsès.jpg" alt="" class="img">
+          <img src="img/spetsès.jpg" alt="" class="img">
           <h2>Île de Spetsès (Îles Saroniques) </h2>
           <p>Spetsès est surnommée l'île aux Jasmins et embaume tout particulièrement le soir </p>
         </div>
 
         <div class="iles">
-          <img src="milos.jpg" alt="" class="img">
+          <img src="img/milos.jpg" alt="" class="img">
           <h2>Milos (Cyclades) </h2>
           <p>Véritable merveille géologique, une grande variété de paysages volcaniques, des falaises aux couleurs somptueuses baignant dans des eaux limpides </p>
         </div>
 
         <div class="iles">
-          <img src="délos.jpg" alt="" class="img">
+          <img src="img/délos.jpg" alt="" class="img">
           <h2>Île de Délos (Cyclades) </h2>
           <p>Lieu sacré érigé en sanctuaire, où serait né Apollon ; conservatoire du passé, figé dans l’état où elle était dans l’Antiquité, avec les ruines de villas hellénistiques et de temples ; panorama sur les îles voisines </p>
         </div>
 
         <div class="iles">
-          <img src="naxos.jpg" alt="" class="img">
+          <img src="img/naxos.jpg" alt="" class="img">
           <h2>Naxos (Cyclades)</h2>
           <p>Une île au riche passé mythologique et historique, paradis des randonnées entre vignobles, oliviers, vergers, potagers et chapelles byzantines </p>
         </div>
 
         <div class="iles">
-          <img src="rhodes.jpg" alt="" class="img">
+          <img src="img/rhodes.jpg" alt="" class="img">
           <h2>Rhodes (Dodécanèse)</h2>
           <p>Une vieille ville médiévale magnifiquement préservée derrière de puissants remparts, une plongée dans l'histoire des Croisades </p>
         </div>
@@ -179,37 +179,37 @@
 
       <div id="iles">
         <div class="iles">
-          <img src="delphes.jpg" alt="" class="img">
+          <img src="img/delphes.jpg" alt="" class="img">
           <h2>Delphes </h2>
           <p>L’un des sites archéologiques les plus visités de Grèce, un site naturel exceptionnel, avec le sanctuaire d’Apollon </p>
         </div>
 
         <div class="iles">
-          <img src="météores.jpg" alt="" class="img">
+          <img src="img/météores.jpg" alt="" class="img">
           <h2>Les Météores</h2>
           <p>D’imposants pitons rocheux, curiosité géologique de toute beauté, et l’un des plus grands complexes monastiques de Grèce</p>
         </div>
 
         <div class="iles">
-          <img src="parthénon.jpg" alt="" class="img">
+          <img src="img/parthénon.jpg" alt="" class="img">
           <h2>Parthénon</h2>
           <p>Édifice religieux, monument d’une grande richesse sculpturale, qui contenait une statue chryséléphantine d'Athéna </p>
         </div>
 
         <div class="iles">
-          <img src="mystra.jpg" alt="" class="img">
+          <img src="img/mystra.jpg" alt="" class="img">
           <h2>Mystra </h2>
           <p>Ruines d'une cité médiévale habillées par la végétation, un spectacle enchanteur rappelant la grandeur de l'Empire byzantin </p>
         </div>
 
         <div class="iles">
-          <img src="olympie.jpg" alt="" class="img">
+          <img src="img/olympie.jpg" alt="" class="img">
           <h2>Olympie</h2>
           <p>Un site archéologique exceptionnel, centre religieux qui monopolisa la communion religieuse et politique de la Grèce antique </p>
         </div>
 
         <div class="iles">
-          <img src="epidaure.jpg" alt="" class="img">
+          <img src="img/epidaure.jpg" alt="" class="img">
           <h2>Site archéologique d'Épidaure </h2>
           <p>Un site grandiose, l'un des plus visités de Grèce, avec un théâtre considéré comme le plus parfait de l'Antiquité, dans un paysage superbe </p>
         </div>
