--- a/index/index.html
+++ b/index/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>La Grèce "vidéos"</title>
-    <link href="style-index.css" rel="stylesheet" type="text/css">
+    <title>Wanderer</title>
+    <link href="css/style-index.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
@@ -14,7 +14,7 @@
 
             <div class="présentation">
                 <div class="taille-div-img">
-                    <img src="japon.jpg" alt="" class="image-présentation">
+                    <img src="img/japon.jpg" alt="" class="image-présentation">
                 </div>
 
                 <div class="text">
@@ -25,7 +25,7 @@
 
             <div>
                 <div class="taille-div-img">
-                    <img src="pain.jpg" alt="" class="image-présentation">
+                    <img src="img/pain.jpg" alt="" class="image-présentation">
                 </div>
 
                 <div>
@@ -36,7 +36,7 @@
 
             <div class="présentation">
                 <div class="taille-div-img">
-                    <img src="salvador.jpg" alt="" class="image-présentation">
+                    <img src="img/salvador.jpg" alt="" class="image-présentation">
                 </div>
 
                 <div>
@@ -47,7 +47,7 @@
 
             <div class="présentation">
                 <div>
-                    <img src="polynésie.jpg" alt="" class="image-présentation">
+                    <img src="img/polynésie.jpg" alt="" class="image-présentation">
                 </div>
 
                 <div>
@@ -58,7 +58,7 @@
 
             <div class="présentation">
                 <div>
-                    <img src="grèce.jpg" alt="" class="image-présentation">
+                    <img src="img/grèce.jpg" alt="" class="image-présentation">
                 </div>
 
                 <div>
