--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wanderer</title>
     <link rel="stylesheet" href="css/voyages.css">
-    <link rel="stylesheet" href="style/footer.css">
+    <link rel="stylesheet" href="css/footer.css">
 </head>
 <body>
     <header>
