--- a/contacte.html
+++ b/contacte.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/contacte.css">
-    <title>contacte</title>
+    <link rel="stylesheet" href="css/contacte.css">
+    <title>Contact | Wanderer</title>
 </head>
 <body>
     <header>
