--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         </ul>
                     </li>
                 </ul>
-                <a class="btn-contact">
+                <a href="contacte.html" class="btn-contact">
                     <span>Contact</span>
                     <svg>
                         <polyline class="remplissage" points="0 0, 150 0, 150 55, 0 55, 0 0"></polyline>
