--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Wanderer</title>
     <link rel="stylesheet" href="css/voyages.css">
     <link rel="stylesheet" href="css/footer.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
