finis presentation de index avec header et footer

--- a/grèce.html
+++ b/grèce.html
@@ -129,7 +129,7 @@
     </section>
 
     <section id="ile">
-      <div>
+      <div class="h1">
         <h1>Les Iles grecques incontournables</h1>
       </div>
 
@@ -173,7 +173,7 @@
     </section>
 
     <section id="site">
-      <div>
+      <div class="h1">
         <h1>Les sites incontournables</h1>
       </div>
 
