ajouté image, h1 et texte pour hero

--- a/france.html
+++ b/france.html
@@ -48,7 +48,8 @@
     <main>
         <section id="france-hero">
             <div class="centrage">
-                <p>La France est la destination la plus visitée du globe, et à juste titre. Dans sa capitale Paris, se trouvent des oeuvres artistiques et architecturales connues et reconnues dans le monde entier. Le splendide Quartier Latin, la Tour Eiffel, le Musée du Louvre. Vous pourrez vous ressourcer parmi ses magnifiques paysages, ses monts, ses plaines et ses rivières. La France, c'est aussi le Glamour, la mode, la gastronomie, ses fromages et ses alcools réputés.</p>
+                <h1>La France</h1>
+                <p>La France est la destination la plus visitée du globe, et à juste titre. Dans sa capitale Paris comme dans ses autres villes, se trouvent des oeuvres artistiques et architecturales connues et reconnues dans le monde entier. Le splendide Quartier Latin, la Tour Eiffel, le Musée du Louvre. Vous pourrez vous ressourcer parmi ses magnifiques paysages, ses monts, ses plaines et ses rivières. La France, c'est aussi le Glamour, la mode, la gastronomie, ses fromages et ses alcools réputés.</p>
             </div>
         </section>
     </main>
