--- a/france.html
+++ b/france.html
@@ -7,6 +7,7 @@
     <title>France | Wanderer</title>
     <link rel="stylesheet" href="css/voyages.css">
     <link rel="stylesheet" href="css/france.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
