modifié curseur par défault dans le hero & ajouté section specialites-fr

--- a/france.html
+++ b/france.html
@@ -53,6 +53,9 @@
                 <p>La France est la destination la plus visitée du globe, et à juste titre. Dans sa capitale Paris comme dans ses autres villes, se trouvent des oeuvres artistiques et architecturales connues et reconnues dans le monde entier. Le splendide Quartier Latin, la Tour Eiffel, le Musée du Louvre. Vous pourrez vous ressourcer parmi ses magnifiques paysages, ses monts, ses plaines et ses rivières. La France, c'est aussi le Glamour, la mode, la gastronomie, ses fromages et ses alcools réputés.</p>
             </div>
         </section>
+        <section id="specialites-fr">
+
+        </section>
     </main>
 </body>
 </html>
