--- a/france.html
+++ b/france.html
@@ -15,7 +15,7 @@
             <a href="index.html"><img id="header-logo" src="media/img/wanderer_logo.png" alt="logo site web"></a>
             <nav>
                 <ul>
-                    <li><a href="#">Accueil</a></li>
+                    <li><a href="index.html">Accueil</a></li>
                     <li class="menu-deroulant">
                         <a href="#">Wanderers</a>
                         <ul class="sous-menu">
