menu déroulant sur la nav en cours

--- a/japon.html
+++ b/japon.html
@@ -13,9 +13,17 @@
         <div class="header-container">
             <img class="logo" src="logo voyage 2-1.png" alt="logo">
             <nav>
-                <ul>
+                <ul class="navbar">
                     <li><a href="">Accueil</a></li>
-                    <li><a href="">Continents</a></li>
+                    <li>
+                        <a href="">Continents</a>
+                        <ul class="sous-menu">
+                            <li><a class="btn-transition" href="europe.html">Europe</a></li>
+                            <li><a class="btn-transition" href="asie.html">Asie</a></li>
+                            <li><a class="btn-transition" href="amerique-centrale.html">Amérique Centrale</a></li>
+                            <li><a class="btn-transition" href="outre-mer.html">Outre-Mer</a></li>
+                        </ul>
+                    </li>
                     <li><a href="">Wanderers</a></li>
                     <li><a href="">Contact</a></li>
                 </ul>
